# man_world

./: .gitignore  CMakeLists.txt  README.md
config/: default_config.json  test_config.json
src/: game.cpp  game.h  hardware.cpp  hardware.h  main.cpp  map.cpp  map.h  render_object.cpp  render_object.h  utills.cpp  utills.h  world.cpp  world.h
src/characters/: characters.h
src/characters/creatures/: creature.h
src/characters/players/: player.h
src/environment/ground/: earth.h  earth.hpp  fire.h  grass.h  grass.hpp  ground.cpp  ground.h  ground.hpp  marble.h  stone.hpp  water.h  water.hpp
src/environment/high_ground/: high_ground.h  high_ground.hpp  marble_block.h  stone_block.h  stone_block.hpp  tree.h  tree.hpp
src/humanoids/: humanoids.hpp
src/humanoids/creatures/: creature.hpp
src/humanoids/players/: player.hpp
src/items/: item.h  item.hpp
